# x69Emulator

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
executable/: code.x69  env_template.txt  x69Emulator.cpp
include/: teminal.h  x69Emulator.h  x69EmulatorLib.h
peripherals/: CMakeLists.txt
peripherals/pf_persistant/: CMakeLists.txt
peripherals/pf_persistant/include/: pf_persistant.h
peripherals/pf_persistant/source/: pf_persistant.cpp
source/: CMakeLists.txt  Emulator.cpp  Emulator.h  x69Emulator.cpp  x69EmulatorLib.cpp
source/ALU/: ALU.cpp  ALU.h  CMakeLists.txt
source/CPU/: CMakeLists.txt  CPU.cpp  CPU.h
source/Instruction/: CMakeLists.txt  Instruction.cpp  Instruction.h
source/Memory/: CMakeLists.txt  Memory.cpp  Memory.h
source/Peripheral/: CMakeLists.txt  Peripheral.cpp  Peripheral.h
source/Register/: CMakeLists.txt  Register.cpp  Register.h
source/Spec/: CMakeLists.txt  Spec.cpp  Spec.h
terminal/: CMakeLists.txt
terminal/docs/: credits.txt  turbovision color mapping.xlsx
terminal/include/: x69Terminal.h
terminal/source/: Colors.h  RealTime.h  x69Terminal.cpp
terminal/source/file_editor/: CMakeLists.txt  file_editor.cpp  file_editor.h
terminal/source/file_view/: CMakeLists.txt  file_view.cpp  file_view.h
terminal/source/register_view/: CMakeLists.txt  register_view.cpp  register_view.h
terminal/source/shell/: CMakeLists.txt  shell.cpp  shell.h
terminal/source/terminal_view/: CMakeLists.txt  terminal_view.cpp  terminal_view.h
test/: test.cpp
tools/assembler/: x69Assembler.h  x69Assembler.lib
